# metricq-sink-websocket

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker.yml
metricq_sink_websocket/: __init__.py  main.py  routes.py  sink.py  views.py  web_socket.py
webclient/: metricq-websocket.js  metricq.js
webclient/example/: example.js  index.html  test.js
