[build-system]
requires = ["setuptools>=52", "wheel", "setuptools_scm[toml]~=5.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | lib
    | src
    | include
  )/
)
'''

[tool.setuptools_scm]
write_to = "metricq_sink_websocket/version.py"
