[metadata]
name = metricq_sink_websocket
version = file: .version
author = TU Dresden
description = A MetricQ sink, which provides live data to consumers over WebSocket connections
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
url = https://github.com/metricq/metricq-sink-websocket
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    metricq_sink_websocket
python_requires = >= 3.10
install_requires =
    aiohttp ~= 3.9.3
    aiohttp-cors ~= 0.7.0
    bidict ~= 0.23.1
    click ~= 8.1.7
    click-completion ~= 0.5.2
    click_log ~= 0.4.0
    metricq ~= 5.3.0

[options.extras_require]
uvloop =
    uvloop
lint =
    black ~= 24.2.0
    flake8
    flake8-bugbear
    isort ~= 5.13.2
typing =
    mypy >= 1.9.0
    mypy-protobuf
dev =
    %(lint)s
    %(typing)s

[options.entry_points]
console_scripts =
    metricq-sink-websocket = metricq_sink_websocket:runserver_cmd


[flake8]
extend-exclude =
    build,
    .venv,
    venv
show-source = True
statistics = True
# Recommendations of black as per
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 80
extend-select = B950
extend-ignore = E203,E501,E701

[tox:tox]
envlist =
    black
    isort
    mypy
    flake8

[testenv:black]
deps = .[lint]
commands = black --check .

[testenv:isort]
deps = .[lint]
commands = isort --diff --check .

[testenv:flake8]
deps = .[lint]
commands = flake8 .

[testenv:mypy]
deps = .[typing]
commands = mypy --strict metricq_sink_websocket
